src/css/code.editor.scss
html,
body {
    overflow: hidden;
    -webkit-user-select: none;
    user-select: none;
    height: 100%;
    width: 100%;
    background-color: grey;
}

.btn-toolbar {
    background-color: rgb(245, 245, 245);
    margin-left: 0px !important;
    margin-right: 0px !important;
    padding-top: 2px !important;
    padding-bottom: 2px !important;
    top: 0;
    position: absolute;
    left: 0;
    right: 0;
}

.btn-toolbar .btn {
    outline: none !important;
}

.btn-toolbar button, .panel-heading button {
    min-width: 26px;
}

.btn-toolbar label {
    margin-bottom: 0 !important;
}

#btn-add-dropdown {
    min-width: auto !important;
}

.fa-file-pdf-o {
    color: #cc3e44 !important;
}

.fa-file-excel-o {
    color: #8dc149 !important;
}

.fa-file-word-o {
    color: #519aba !important;
}

.fa-file-image-o {
    color: #a074c4 !important;
}

.fa-file-video-o {
    color: #f55385 !important;
}

.fa-file-archive-o {
    color: #6d8086 !important;
}

.icon-o {
    color: #8dc149 !important;
}

.icon-h {
    color: #a074c4 !important;
}

.icon-c {
    color: #519aba !important;
}

.fa-map-o {
    color: #8dc149 !important;
}

.editor {
    top: 0;
    bottom: 20px;
    left: 0;
    position: absolute !important;
    right: 0;
    padding: 0;
    margin: 0;
    border: 0;
    border-radius: 0;
    border-top: 1px solid #ccc;
}

.output {
    bottom: 0;
    left: 0;
    right: 0;
    position: absolute;
    height: 170px;
    padding: 0px;
    cursor: default;
    display: none;
}

.output a {
    padding-right: 5px;
    padding-left: 5px;
}

#output-toolbar {
    border-top: #ccc 1px solid;
    border-bottom: #ccc 1px solid;
}

#output-toolbar .close {
    font-size: 15px;
    float: right;
    padding: 5px;
}

.output-display {
    position: absolute;
    top: 31px;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
    outline: none;
    background: white;
}

.output .error {
    color: red;
    text-decoration: none;
    display: block;
}

.output .warning {
    text-decoration: none;
    color: #DDDD00;
    display: block;
}

.output .error:hover, .output .warning:hover {
    text-decoration: underline;
}


.statusbar {
    bottom: 0;
    position: absolute;
    left: 0;
    right: 0;
    cursor: default;
    height: 20px;
    border-top: #ccc 1px solid;
    background-color: rgb(245, 245, 245);
}

.statusbar span {
    display: inline-block;
    padding-left: 6px;
    padding-right: 6px;
}

.statusbar span.left, .statusbar div.left {
    border-right: #ccc 1px solid;
}

.statusbar span.right, .statusbar div.left {
    float: right;
    border-left: #ccc 1px solid;
    text-align: center;
}

#statusbar-location {
    min-width: 100px;
}

.ace_status-indicator {
    float: right;
}

.cm {
    top: 26px !important;
    bottom: 20px;
}

.cm-tabpane-container {
    background-color: grey;
    bottom: 1px;
}

.cm-tabstrip li {
    opacity: 1;
    color: silver;
}

.cm-tabstrip li.changed {
    background-color: lighten(rgb(218, 255, 181), 10%) !important;
    border-color: lighten(rgb(119, 168, 69), 10%) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.new {
    background-color: lighten(rgb(178, 226, 255), 10%) !important;
    border-color: lighten(rgb(94, 185, 242), 10%) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.changed.active {
    background-color: rgb(218, 255, 181) !important;
    border-color: rgb(119, 168, 69) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.new.active {
    background-color: rgb(178, 226, 255) !important;
    border-color: rgb(94, 185, 242) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.active {
    background-color: rgb(249, 242, 217);
    border-color: rgb(247, 216, 106);
    opacity: 1;
    color: black;
}

#btm-drag-bar {
    background-color: transparent;
    height: 3px;
    width: 100%;
    cursor: row-resize;
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    z-index: 100;
}

#btm-ghost-bar {
    height: 3px;
    background-color: #000;
    opacity: 0.5;
    position: absolute;
    cursor: row-resize;
    z-index: 999;
}

.form-control-feedback,
.form-error {
    display: none;
}

.has-error .form-control-feedback {
    display: inline;
    top: 20px;
}

.has-error .form-error {
    display: block;
}

.aura-error,
.form-error,
.has-error a {
    color: #A94442;
}

.has-error .input-group .form-control-feedback {
    top: -2px;
    right: 30px;
}

dialog .close {
    outline: none !important;
}

.splash-mask {
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: block;
    z-index: 9000;
}

.splash-screen {
    display: block;
    background-color: #e6e6e6;
    color: black;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    padding: 20px;
    text-align: center;
    border: 1px solid black;
    -webkit-box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
    -moz-box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
    box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
    margin: auto;
    width: 368px;
    height: 120px;
    position: relative;
    top: 50%;
    transform: perspective(1px) translateY(-50%);
}

.splash-layout {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: block;
    z-index: 10000;
    text-align: center;
}

.splash-screen h1, .splash-screen h3, .splash-screen h6 {
    margin: 0px;
}

.splash-screen h3 {
    margin-top: 10px;
    margin-bottom: 10px;
}

#splashProgress {
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    border: 1px solid black;
    border-radius: 4px;
}

#splashProgress::-webkit-progress-bar {
    background-color: #eee;
    border-radius: 4px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
}

#splashProgress[value]::-webkit-progress-value {
    border-radius: 4px;
    background-color: #09c;
}

.monaco-editor {
    border-top: 1px solid #ccc;
}

.monaco-editor .margin-view-overlays .current-line {
    background-color: rgba(0, 0, 0, 0.071);
}

